--- a/ui/compare-app/src/App.css
+++ b/ui/compare-app/src/App.css
@@ -10,6 +10,10 @@
   overflow-y: scroll;
 }
 
+.CarSelector_Row {
+  margin-bottom: 20px;
+}
+
 .RootComponent-ButtonMinus {
   margin-right: 5px;
 }
